tests/neg/inline-position/A_1.scala
object A {

  inline def f(x: => Object) = (x, x)

}